added priing slider in pricing page

--- a/website-docs/team.html
+++ b/website-docs/team.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/axblogo2.svg" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="vendors/slick/slick.css">
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
 
-    <title>Pixel Builders</title>
+    <title>AXB Demolition - Junk Removal</title>
 </head>
 
 <body>
@@ -30,16 +30,13 @@
                             <div class="row">
                                 <div class="col-md-8 col-9">
                                     <div class="header_contact_info">
-                                        <a href="#"><i class="fas fa-phone"></i>Call Us: +07 554 332 322</a>
-                                        <a href="mailto:pixelbuilders@email.com"><i class="fas fa-envelope"></i>pixelbuilders@email.com</a>
+                                        <a href="tel:+1 613 913 1899"><i class="fas fa-phone"></i>Call Us: +1 613 913 1899</a>
+                                        <a href="mailto:pixelbuilders@email.com"><i class="fas fa-envelope"></i>axbdemolition@gmail.com</a>
                                     </div>
                                 </div>
                                 <div class="col-md-4 col-3 text-right">
                                     <div class="h_social_icon">
                                         <a href="#"><i class="ti-facebook"></i></a>
-                                        <a href="#"><i class="ti-pinterest"></i></a>
-                                        <a href="#"><i class="ti-twitter-alt"></i></a>
-                                        <a href="#"><i class="fab fa-youtube"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -48,7 +45,7 @@
                 </div>
                 <nav class="navbar navbar-expand-lg header_one header_dark" id="header">
                     <div class="container">
-                        <a class="navbar-brand" href="#"><img src="img/Logo.png" alt=""></a>
+                        <a class="navbar-brand" href="#"><img class="logo" src="img/axblogo2.svg" alt="Official logo of AXB demolition"></a>
                         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="menu_toggle">
                                 <span class="hamburger">
@@ -65,218 +62,77 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ml-auto menu">
                                 <li class="nav-item dropdown submenu">
-                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <a class="nav-link dropdown-toggle" href="index-2.html">
                                         HOME
                                     </a>
-                                    <ul class="dropdown-menu">
-                                        <li class="nav-item"><a href="index.html" class="nav-link">Home One</a></li>
-                                        <li class="nav-item"><a href="index-2.html" class="nav-link">Home Two</a></li>
-                                        <li class="nav-item"><a href="index-3.html" class="nav-link">Home Three</a></li>
-                                    </ul>
                                 </li>
-                                <li class="nav-item"><a class="nav-link" href="about.html">ABOUT</a></li>
                                 <li class="nav-item"><a class="nav-link" href="service.html">SERVICES</a></li>
-                                <li class="nav-item"><a class="nav-link" href="portfolio.html">PORTFOLIO</a></li>
-                                <li class="nav-item active"><a class="nav-link" href="team.html">TEAM</a></li>
-                                <li class="nav-item dropdown submenu">
-                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        BLOG
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li class="nav-item"><a href="blog.html" class="nav-link">Blog List</a></li>
-                                        <li class="nav-item"><a href="blog-grid.html" class="nav-link">Blog Grid</a></li>
-                                        <li class="nav-item"><a href="blog-details.html" class="nav-link">Blog Details</a></li>
-                                    </ul>
-                                </li>
+                                <li class="nav-item"><a class="nav-link" href="about.html">ABOUT US</a></li>
+                                <li class="nav-item active"><a class="nav-link" href="team.html">PRICING</a></li>
+                                <li class="nav-item"><a class="nav-link" href="portfolio.html">GALLERY</a></li>
                                 <li class="nav-item"><a class="nav-link" href="contact.html">CONTACT</a></li>
-                            </ul>
-                            <ul class="list-unstyled search">
-                                <li><a href="#" class="search-btn"><i class="fas fa-search"></i></a></li>
                             </ul>
                         </div>
                     </div>
                 </nav>
             </header>
             <section class="banner_area team_banner_area">
-                <div class="overlay_bg parallax-effect" style="background: url(./img/banner7.jpg) no-repeat;"></div>
+                <div class="overlay_bg parallax-effect" style="background: url(./img/banner7.jpg) rgb(117, 114, 114) no-repeat;"></div>
                 <div class="container">
                     <div class="breadcrumb_content">
-                        <h2>OUR TEAM</h2>
+                        <h2>PRICING</h2>
                         <ol class="list-unstyled">
-                            <li><a href="#">Home</a></li>
-                            <li>Team</li>
+                            <li><a href="index-2.html">Home</a></li>
+                            <li>Pricing</li>
                         </ol>
                     </div>
                 </div>
             </section>
-            <section class="con_team_area_three sec_gap">
+            <!-- <section class="con_skill_area">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-lg-4 col-sm-6 wow fadeInLeft" data-wow-delay="0.1s">
-                            <div class="con_team_item_two">
-                                <div class="team_img hover_effect">
-                                    <img src="img/home-1/team1.jpg" alt="team1">
-                                    <div class="social_icon">
-                                        <a href="#"><i class="ti-facebook"></i></a>
-                                        <a href="#"><i class="ti-twitter-alt"></i></a>
-                                        <a href="#"><i class="ti-pinterest"></i></a>
-                                    </div>
-                                </div>
-                                <div class="content">
-                                    <a href="#">
-                                        <h5>Jarvis Pepperspray</h5>
-                                    </a>
-                                    <p>CIVIL ENGINEER</p>
-                                </div>
-                            </div>
+                    <div class="cons_skill_info">
+                       
+                    </div>
+                </div>
+            </section> -->
+            <section class="con_service_area sec_gap bg_color">
+                <div class="container">
+                    <div class="section_title text-center wow fadeInUp" data-wow-delay="0.2s">
+                        <h6 class="con_title_top">SELECT YOUR MEASUREMENT SIZE BELOW</h6>
+                        <h2 class="con_title">JUNK REMOVAL PRICING</h2>
+                        <p class="con_p"></p>
+                        <form class="price-slider">
+                            <input type="range" id="priceInput" step="25" value="0" name="priceInput" list="markers"/>
+                            <datalist id="markers">
+                                <option value="0" label="1/5 Load"></option>
+                                <option value="25" label="2/5 Load"></option>
+                                <option value="50" label="3/5 Load"></option>
+                                <option value="75" label="4/5 Load"></option>
+                                <option value="100" label="Full Load"></option>
+                            </datalist>
+                            <output for="" id="output">205.00$</output>
+                        </form>
+                    </div>
+                </div>
+                <div class="pricing row">
+                    <div class="col-lg-6">
+                        <div class="con_about_img wow fadeInLeft" data-wow-delay="0.2s">
+                            <img data-parallax='{"x": 10, "y": 20}' src="img/home-1/about.jpg" alt="Dump truck disposing its waste material in landfill">
                         </div>
-                        <div class="col-lg-4 col-sm-6 wow fadeInLeft" data-wow-delay="0.3s">
-                            <div class="con_team_item_two">
-                                <div class="team_img hover_effect">
-                                    <img src="img/team/team4.jpg" alt="team1">
-                                    <div class="social_icon">
-                                        <a href="#"><i class="ti-facebook"></i></a>
-                                        <a href="#"><i class="ti-twitter-alt"></i></a>
-                                        <a href="#"><i class="ti-pinterest"></i></a>
-                                    </div>
-                                </div>
-                                <div class="content">
-                                    <a href="#">
-                                        <h5>Bodrum Salvador</h5>
-                                    </a>
-                                    <p>DESIGNER</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-sm-6 wow fadeInLeft" data-wow-delay="0.5s">
-                            <div class="con_team_item_two">
-                                <div class="team_img hover_effect">
-                                    <img src="img/home-1/team3.jpg" alt="team1">
-                                    <div class="social_icon">
-                                        <a href="#"><i class="ti-facebook"></i></a>
-                                        <a href="#"><i class="ti-twitter-alt"></i></a>
-                                        <a href="#"><i class="ti-pinterest"></i></a>
-                                    </div>
-                                </div>
-                                <div class="content">
-                                    <a href="#">
-                                        <h5>Rodney Artichoke</h5>
-                                    </a>
-                                    <p>PROJECT ENGINEER</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-sm-6 wow fadeInLeft" data-wow-delay="0.2s">
-                            <div class="con_team_item_two">
-                                <div class="team_img hover_effect">
-                                    <img src="img/team/team5.jpg" alt="team1">
-                                    <div class="social_icon">
-                                        <a href="#"><i class="ti-facebook"></i></a>
-                                        <a href="#"><i class="ti-twitter-alt"></i></a>
-                                        <a href="#"><i class="ti-pinterest"></i></a>
-                                    </div>
-                                </div>
-                                <div class="content">
-                                    <a href="#">
-                                        <h5>Barrett Benedict</h5>
-                                    </a>
-                                    <p>BUILDING INSPECTOR</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-sm-6 wow fadeInLeft" data-wow-delay="0.4s">
-                            <div class="con_team_item_two">
-                                <div class="team_img hover_effect">
-                                    <img src="img/team/team6.jpg" alt="team1">
-                                    <div class="social_icon">
-                                        <a href="#"><i class="ti-facebook"></i></a>
-                                        <a href="#"><i class="ti-twitter-alt"></i></a>
-                                        <a href="#"><i class="ti-pinterest"></i></a>
-                                    </div>
-                                </div>
-                                <div class="content">
-                                    <a href="#">
-                                        <h5>Julian Jackson</h5>
-                                    </a>
-                                    <p>DESIGNER</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-sm-6 wow fadeInLeft" data-wow-delay="0.6s">
-                            <div class="con_team_item_two">
-                                <div class="team_img hover_effect">
-                                    <img src="img/team/team7.jpg" alt="team1">
-                                    <div class="social_icon">
-                                        <a href="#"><i class="ti-facebook"></i></a>
-                                        <a href="#"><i class="ti-twitter-alt"></i></a>
-                                        <a href="#"><i class="ti-pinterest"></i></a>
-                                    </div>
-                                </div>
-                                <div class="content">
-                                    <a href="#">
-                                        <h5>Austin Benjamin</h5>
-                                    </a>
-                                    <p>CONSTRUCTOR</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-sm-6 wow fadeInLeft" data-wow-delay="0.2s">
-                            <div class="con_team_item_two">
-                                <div class="team_img hover_effect">
-                                    <img src="img/team/team8.jpg" alt="team1">
-                                    <div class="social_icon">
-                                        <a href="#"><i class="ti-facebook"></i></a>
-                                        <a href="#"><i class="ti-twitter-alt"></i></a>
-                                        <a href="#"><i class="ti-pinterest"></i></a>
-                                    </div>
-                                </div>
-                                <div class="content">
-                                    <a href="#">
-                                        <h5>Charles Clare</h5>
-                                    </a>
-                                    <p>BUILDING INSPECTOR</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-sm-6 wow fadeInLeft" data-wow-delay="0.4s">
-                            <div class="con_team_item_two">
-                                <div class="team_img hover_effect">
-                                    <img src="img/team/team9.jpg" alt="team1">
-                                    <div class="social_icon">
-                                        <a href="#"><i class="ti-facebook"></i></a>
-                                        <a href="#"><i class="ti-twitter-alt"></i></a>
-                                        <a href="#"><i class="ti-pinterest"></i></a>
-                                    </div>
-                                </div>
-                                <div class="content">
-                                    <a href="#">
-                                        <h5>Donald Duke</h5>
-                                    </a>
-                                    <p>FIELD ENGINEER</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-sm-6 wow fadeInLeft" data-wow-delay="0.6s">
-                            <div class="con_team_item_two">
-                                <div class="team_img hover_effect">
-                                    <img src="img/team/team10.jpg" alt="team1">
-                                    <div class="social_icon">
-                                        <a href="#"><i class="ti-facebook"></i></a>
-                                        <a href="#"><i class="ti-twitter-alt"></i></a>
-                                        <a href="#"><i class="ti-pinterest"></i></a>
-                                    </div>
-                                </div>
-                                <div class="content">
-                                    <a href="#">
-                                        <h5>Edward Eugene</h5>
-                                    </a>
-                                    <p>ASSISTANT PROJECT MANAGER</p>
-                                </div>
-                            </div>
+                    </div>
+                    <div class="col-lg-5 d-flex align-items-center">
+                        <div class="con_about_text">
+                            <h6 class="con_title_top wow fadeInUp" data-wow-delay="0.2s" >ABOUT US</h6>
+                            <h2 class="con_title wow fadeInUp" data-wow-delay="0.3s">DEMOLITION & JUNK REMOVAL</h2>
+                            <p class="con_p wow fadeInUp" data-wow-delay="0.4s"> </p>
+                            <a href="about.html" class="con_btn btn_effect wow fadeInUp" data-wow-delay="0.5s">Learn More</a>
                         </div>
                     </div>
                 </div>
             </section>
+
+
+            
             <footer class="footer_area">
                 <div class="container">
                     <div class="row footer_top">
@@ -359,6 +215,9 @@
             </div>
         </div>
     </form>
+
+    <!-- Mandatory JavaScript -->
+    <script src="js/pricing.js"></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="js/jquery-3.2.1.min.js"></script>
