added styling to pricing slider

--- a/website-docs/team.html
+++ b/website-docs/team.html
@@ -100,7 +100,7 @@
                     <div class="section_title text-center wow fadeInUp" data-wow-delay="0.2s">
                         <h6 class="con_title_top">SELECT YOUR MEASUREMENT SIZE BELOW</h6>
                         <h2 class="con_title">JUNK REMOVAL PRICING</h2>
-                        <p class="con_p"></p>
+                        <p class="con_p">Our pricing chart below is strictly for Junk Removal services and does not reflect demolition prices.<br>Our minimum charge is $95. The price varies according to the load size you need.</p>
                         <form class="price-slider">
                             <input type="range" id="priceInput" step="25" value="0" name="priceInput" list="markers"/>
                             <datalist id="markers">
@@ -120,17 +120,24 @@
                             <img data-parallax='{"x": 10, "y": 20}' src="img/home-1/about.jpg" alt="Dump truck disposing its waste material in landfill">
                         </div>
                     </div>
-                    <div class="col-lg-5 d-flex align-items-center">
+                    <div class="col-lg-5 d-flex align-items-top">
                         <div class="con_about_text">
                             <h6 class="con_title_top wow fadeInUp" data-wow-delay="0.2s" >ABOUT US</h6>
-                            <h2 class="con_title wow fadeInUp" data-wow-delay="0.3s">DEMOLITION & JUNK REMOVAL</h2>
-                            <p class="con_p wow fadeInUp" data-wow-delay="0.4s"> </p>
+                            <p class="con_p wow fadeInUp" data-wow-delay="0.4s">HELO GELEAGMSDLA  ALSNALF  ALSDNALSD NAASLKNALKGN </p>
                             <a href="about.html" class="con_btn btn_effect wow fadeInUp" data-wow-delay="0.5s">Learn More</a>
                         </div>
                     </div>
                 </div>
             </section>
-
+            <section class="con_call_action_area">
+                <div class="overlay_bg parallax-effect" style="background: url(./img/home/action.jpg) no-repeat;"></div>
+                <div class="container">
+                    <div class="d-flex action_info justify-content-between align-items-center">
+                        <h2 class="wow fadeInLeft" data-wow-delay="0.2s">We will provide you the best work<br> which you dreamt for!</h2>
+                        <a href="#" class="con_btn btn_effect wow fadeInRight" data-wow-delay="0.3s">FREE CONSULTATION</a>
+                    </div>
+                </div>
+            </section>
 
             
             <footer class="footer_area">
