--- a/website-docs/team.html
+++ b/website-docs/team.html
@@ -31,7 +31,7 @@
                                 <div class="col-md-8 col-9">
                                     <div class="header_contact_info">
                                         <a href="tel:+1 613 913 1899"><i class="fas fa-phone"></i>Call Us: +1 613 913 1899</a>
-                                        <a href="mailto:pixelbuilders@email.com"><i class="fas fa-envelope"></i>axbdemolition@gmail.com</a>
+                                        <a href="mailto:axbdemolition@gmail.com"><i class="fas fa-envelope"></i>axbdemolition@gmail.com</a>
                                     </div>
                                 </div>
                                 <div class="col-md-4 col-3 text-right">
@@ -101,6 +101,7 @@
                         <h6 class="con_title_top">SELECT YOUR MEASUREMENT SIZE BELOW</h6>
                         <h2 class="con_title">JUNK REMOVAL PRICING</h2>
                         <p class="con_p">Our pricing chart below is strictly for Junk Removal services and does not reflect demolition prices.<br>Our minimum charge is $95. The price varies according to the load size you need.</p>
+                        <p class="con_title_top wow fadeInUp" data-wow-delay="0.2s">Select your load size</p>
                         <form class="price-slider">
                             <input type="range" id="priceInput" step="25" value="0" name="priceInput" list="markers"/>
                             <datalist id="markers">
@@ -116,21 +117,21 @@
                 </div>
                 <div class="pricing row">
                     <div class="col-lg-6">
-                        <div class="con_about_img wow fadeInLeft" data-wow-delay="0.2s">
-                            <img data-parallax='{"x": 10, "y": 20}' src="img/home-1/about.jpg" alt="Dump truck disposing its waste material in landfill">
-                        </div>
+                        
+                            <img class="truck" data-parallax='{"x": 10, "y": 20}' src="img/home-1/truck-image.png" alt="Dump truck disposing its waste material in landfill">
+                        
                     </div>
-                    <div class="col-lg-5 d-flex align-items-top">
+                    <div class="col-lg-5 d-flex align-items-center">
                         <div class="con_about_text">
-                            <h6 class="con_title_top wow fadeInUp" data-wow-delay="0.2s" >ABOUT US</h6>
-                            <p class="con_p wow fadeInUp" data-wow-delay="0.4s">HELO GELEAGMSDLA  ALSNALF  ALSDNALSD NAASLKNALKGN </p>
-                            <a href="about.html" class="con_btn btn_effect wow fadeInUp" data-wow-delay="0.5s">Learn More</a>
+                            <h6 class="con_title_top wow fadeInUp" data-wow-delay="0.2s" >*Truck Measurements: 13ft long X 8 ft wide X 6ft high</h6>
+                            <p class="con_p wow fadeInUp" data-wow-delay="0.4s"> </p>
+                            <!-- <a href="about.html" class="con_btn btn_effect wow fadeInUp" data-wow-delay="0.5s">Learn More</a> -->
                         </div>
                     </div>
                 </div>
             </section>
             <section class="con_call_action_area">
-                <div class="overlay_bg parallax-effect" style="background: url(./img/home/action.jpg) no-repeat;"></div>
+                <div class="overlay_bg parallax-effect price-action" style="background: url(./img/home/action.jpg) no-repeat;"></div>
                 <div class="container">
                     <div class="d-flex action_info justify-content-between align-items-center">
                         <h2 class="wow fadeInLeft" data-wow-delay="0.2s">We will provide you the best work<br> which you dreamt for!</h2>
