added 3 mainpoints to homepage/ adjusted gallery

--- a/website-docs/index-2.html
+++ b/website-docs/index-2.html
@@ -143,34 +143,34 @@
                     <div class="section_title text-center wow fadeInUp" data-wow-delay="0.2s">
                         <h6 class="con_title_top">OUR SERVICES</h6>
                         <h2 class="con_title">DEMOLITION & JUNK REMOVAL</h2>
-                        <p class="con_p">Wether it's interior or exterior demolition we do it all. We specialize in the removal of hot tubs, in-ground and above-ground pools, decks, sheds, porches, fences, additions, small houses, barns, bathrooms, kitchens, jacuzzis, fireplace, driveways, fallen trees, pergolas, flooring, interlock and much more. We have the necessary tools and knowledge to make anything disappear and leave you wi  ha clean slate and peace ofmind.</p>
+                        <p class="con_p">Whether it's interior or exterior demolition we do it all. We specialize in the removal of hot tubs, in-ground and above-ground pools, decks, sheds, porches, fences, additions, small houses, barns, bathrooms, kitchens, jacuzzis, fireplace, driveways, fallen trees, pergolas, flooring, interlock and much more. We have the necessary tools and knowledge to make anything disappear and leave you with a clean slate and peace of mind.</p>
                     </div>
                     <div class="row">
                         <div class="col-lg-4 col-6 wow fadeInUp" data-wow-delay="0.3s">
                             <div class="con_service_item">
-                                <div class="icon"><img src="img/home-1/icon5.png" alt=""></div>
-                                <a href="#">
-                                    <h4>Architectural Design</h4>
+                                <div class="icon"><img src="img/home-1/icon3.png" alt=""></div>
+                                <a href="#quote">
+                                    <h4>Impecable & Efficient Demolition Service</h4>
                                 </a>
-                                <p>Twit cras excuse my French matie boy grub it’s all gone to pot off his nut butty horse play blow off pardon </p>
+                                <p>We strive to offer the absolute best in terms of excellence and quality without sacrificing your budget needs. Contact us to get a free quote.</p>
                             </div>
                         </div>
                         <div class="col-lg-4 col-6 wow fadeInUp" data-wow-delay="0.5s">
                             <div class="con_service_item">
-                                <div class="icon"><img src="img/home-1/icon6.png" alt=""></div>
-                                <a href="#">
-                                    <h4>Construction Management</h4>
+                                <div class="icon"><img src="img/home-1/icon7.png" alt=""></div>
+                                <a href="#quote">
+                                    <h4>Ottawa's Most Reliable </h4>
                                 </a>
-                                <p>Twit cras excuse my French matie boy grub it’s all gone to pot off his nut butty horse play blow off pardon </p>
+                                <p>Our experienced team will be with you every step of the way to ensure that your project is executed to perfection. Our professional, dedicated and flexible </p>
                             </div>
                         </div>
                         <div class="col-lg-4 col-6 wow fadeInUp" data-wow-delay="0.7s">
                             <div class="con_service_item">
-                                <div class="icon"><img src="img/home-1/icon7.png" alt=""></div>
-                                <a href="#">
-                                    <h4>Skilled Engineers</h4>
+                                <div class="icon"><img src="img/home-1/icon4.png" alt=""></div>
+                                <a href="#quote">
+                                    <h4>Tools & Experience</h4>
                                 </a>
-                                <p>Twit cras excuse my French matie boy grub it’s all gone to pot off his nut butty horse play blow off pardon </p>
+                                <p>Our team is equipped with the tools to carry out a wide range of demolition and junk removal work. We have made it our goal to deliver the most effective solutions to your needs. </p>
                             </div>
                         </div>
                     </div>
@@ -183,7 +183,7 @@
                         <a href="https://www.youtube.com/embed/OM7Muan7JVc" class="video_btn popup-youtube wow fadeIn" data-wow-delay="0.5s">
                             <span></span>
                         </a>
-                        <h2>We will provide you the best <br>in terms of quality and service! </h2>
+                        <h2>We Strive to Offer Ottawa the Best <br> Demolition & Junk Removal Service! </h2>
                     </div>
                 </div>
             </section>
@@ -224,32 +224,31 @@
                         <div data-filter="*" class="work_portfolio_item active wow fadeInLeft" data-wow-delay="0.2s">ALL</div>
                         <div data-filter=".dem" class="work_portfolio_item wow fadeInLeft" data-wow-delay="0.4s">DEMOLITION</div>
                         <div data-filter=".junk" class="work_portfolio_item wow fadeInLeft" data-wow-delay="0.6s">JUNK REMOVAL</div>
-                        <div data-filter=".com" class="work_portfolio_item wow fadeInLeft" data-wow-delay="0.7s">POOL DEMOLITION</div>
                     </div>
 
                     <div class="row portfolio_gallery" id="work-portfolio">
 
-                        <div class="col-lg-4 col-sm-6 portfolio_item con in">
+                        <div class="col-lg-4 col-sm-6 portfolio_item dem">
                             <div class="portfolio_img ">
                                 <img src="img/home-1/project/1.jpg" alt="" class="small-image">
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6 portfolio_item design build">
+                        <div class="col-lg-4 col-sm-6 portfolio_item design build dem">
                             <div class="portfolio_img ">
                                 <img src="img/home-1/project/2.jpg" alt="" class="small-image">
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6 portfolio_item com design">
+                        <div class="col-lg-4 col-sm-6 portfolio_item junk design">
                             <div class="portfolio_img ">
                                 <img src="img/home-1/project/3.jpg" alt="" class="small-image">
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6 portfolio_item in con">
+                        <div class="col-lg-4 col-sm-6 portfolio_item junk dem">
                             <div class="portfolio_img ">
                                 <img src="img/home-1/project/4.jpg" alt="" class="small-image">
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6 portfolio_item design">
+                        <div class="col-lg-4 col-sm-6 portfolio_item design junk">
                             <div class="portfolio_img ">
                                 <img src="img/home-1/project/5.jpg" alt="" class="small-image">
                             </div>
