--- a/website-docs/index-2.html
+++ b/website-docs/index-2.html
@@ -281,13 +281,13 @@
             </section>
 
 
-            <section class="con_testimonial_area">
+            <!-- <section class="con_testimonial_area">
                 <div class="container_testimonials section_title text-center wow fadeInUp">
                     <h6 class="con_title_top">See what people say about us</h6>
                     <h2 class="con_title">Our testimonials</h2>
                     
                 </div>
-            </section>
+            </section> -->
             <section class="con_team_area_two sec_gap bg_color">
                 <div class="container">
                     <div class="section_title text-center wow fadeInUp" data-wow-delay="0.2s">
@@ -312,11 +312,12 @@
                                 </div>
                             </div>
                         </div>
-                       <!--  <div class="col-lg-5 wow fadeInLeft" data-wow-delay="0.3s">
+                        <div class="col-lg-6 wow fadeInLeft" data-wow-delay="0.3s">
                             <div class="con_team_item_two">
-                                <p>Ths is the following text</p>
+                                <h5 class="con_title_top">A word from our owner</h5>
+                                <p class="con_p">From Demolition to Junk Removal, we provide a professional and personalized experience. AXB's hands-on owners believe customer success is driven by customer satisfaction. AXB promises to exceed our expectations. From the initial meeting to the last email pulled, our team is committed to going above and beyond for every client.</p>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
             </section>
@@ -367,11 +368,11 @@
                                 <div class="info_list">
                                     <div class="info_item">
                                         <i class="ti-location-pin"></i>
-                                        <p>2602 Powder House Road, West Palm Beach, FL 33410</p>
+                                        <p>4867 Navan Rd, Ottawa, ON K4B 1H9</p>
                                     </div>
                                     <div class="info_item">
                                         <i class="ti-mobile"></i>
-                                        <p><a href="tel:4355803031">+435-580-3031</a></p>
+                                        <p><a href="tel:6139131899">+1 613 913 1899</a></p>
                                     </div>
                                     <div class="info_item">
                                         <i class="ti-email"></i>
@@ -394,19 +395,8 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-lg-2 col-sm-5 wow fadeInUp" data-wow-delay="0.6s">
-                            <div class="f_widget link_widget">
-                                <h2 class="f_title">Useful links</h2>
-                                <ul class="list-unstyled">
-                                    <li><a href="#">Home</a></li>
-                                    <li><a href="#">About</a></li>
-                                    <li><a href="#">Services</a></li>
-                                    <li><a href="#">Portfolio</a></li>
-                                </ul>
-                            </div>
-                        </div>
                     </div>
-                    <div class="footer_bottom wow fadeInUp" data-wow-delay="0.4s">© 2023. All Rights Reserved. Design by <a href="#">Pixel Builders</a></div>
+                    <div class="footer_bottom wow fadeInUp" data-wow-delay="0.4s">© 2023. All Rights Reserved. Design by <a href="decodeseb.com">Sébastien Villiers</a></div>
                 </div>
             </footer>
         </div>
