renamed index-2.html file

--- a/website-docs/service.html
+++ b/website-docs/service.html
@@ -63,7 +63,7 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ml-auto menu">
                                 <li class="nav-item">
-                                    <a class="nav-link dropdown-toggle" href="index-2.html" >
+                                    <a class="nav-link dropdown-toggle" href="index.html" >
                                         HOME
                                     </a>
                                     <li class="nav-item active"><a class="nav-link" href="service.html">SERVICES</a></li>
@@ -82,7 +82,7 @@
                     <div class="breadcrumb_content">
                         <h2>OUR SERVICES</h2>
                         <ol class="list-unstyled">
-                            <li><a href="index-2.html">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li>Services</li>
                         </ol>
                     </div>
