--- a/website-docs/about.html
+++ b/website-docs/about.html
@@ -64,7 +64,7 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ml-auto menu">
                                 <li class="nav-item dropdown submenu">
-                                    <a class="nav-link" href="index-2.html" >
+                                    <a class="nav-link" href="index.html" >
                                         HOME
                                     </a>
                                 </li>
