--- a/website-docs/contact.html
+++ b/website-docs/contact.html
@@ -46,7 +46,7 @@
                 </div>
                 <nav class="navbar navbar-expand-lg header_one header_dark" id="header">
                     <div class="container">
-                        <a class="navbar-brand" href="index-2.html"><img class="logo" src="img/axblogo2.svg" alt="Official Logo of AXB Demolition"></a>
+                        <a class="navbar-brand" href="index.html"><img class="logo" src="img/axblogo2.svg" alt="Official Logo of AXB Demolition"></a>
                         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="menu_toggle">
                                 <span class="hamburger">
@@ -64,7 +64,7 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ml-auto menu">
                                 <li class="nav-item dropdown submenu">
-                                    <a class="nav-link" href="index-2.html">
+                                    <a class="nav-link" href="index.html">
                                         HOME
                                     </a>
                                 </li>
