--- a/website-docs/index.html
+++ b/website-docs/index.html
@@ -45,7 +45,7 @@
                 </div>
                 <nav class="navbar navbar-expand-lg header_three header_dark" id="header">
                     <div class="container">
-                        <a class="navbar-brand" href="index.html"><img class="small-logo" src="img/axblogo2.svg" alt=""></a>
+                        <a class="navbar-brand" href="index-2.html"><img class="small-logo" src="img/axblogo2.svg" alt=""></a>
                         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="menu_toggle">
                                 <span class="hamburger">
