--- a/website-docs/pricing.html
+++ b/website-docs/pricing.html
@@ -62,7 +62,7 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ml-auto menu">
                                 <li class="nav-item dropdown submenu">
-                                    <a class="nav-link dropdown-toggle" href="index-2.html">
+                                    <a class="nav-link dropdown-toggle" href="index.html">
                                         HOME
                                     </a>
                                 </li>
@@ -82,7 +82,7 @@
                     <div class="breadcrumb_content">
                         <h2>PRICING</h2>
                         <ol class="list-unstyled">
-                            <li><a href="index-2.html">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li>Pricing</li>
                         </ol>
                     </div>
