fixed gallery bug

--- a/website-docs/portfolio.html
+++ b/website-docs/portfolio.html
@@ -249,7 +249,7 @@
                                 <img src="img/home-1/project/30.jpg" alt="" class="small-image">
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6 portfolio_item in con">
+                        <!-- <div class="col-lg-4 col-sm-6 portfolio_item in con">
                             <div class="portfolio_img">
                                 <img src="img/home-1/project/31.jpg" alt="" class="small-image">
                             </div>
@@ -278,7 +278,7 @@
                             <div class="portfolio_img">
                                 <img src="img/home-1/project/36.jpg" alt="" class="small-image">
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
                     <!----------------- modal window popup ------------------->
