contact us page update

--- a/website-docs/pricing.html
+++ b/website-docs/pricing.html
@@ -92,10 +92,10 @@
                 <div class="container">
                     <div class="ribbon_info row align-items-center">
                         <div class="col-md-8">
-                            <h2>CLICK HERE TO GET A QUOTE FOR DEMOLITIONS IN OTTAWA</h2>
+                            <h2>CLICK HERE TO GET A QUOTE FOR DEMOLITION SERVICES IN OTTAWA</h2>
                         </div>
                         <div class="col-md-4 text-right">
-                            <a href="contact.html" class="con_btn btn_effect">GET A QUOTE</a>
+                            <a href="contact.html" class="con_btn btn_effect price_call">GET A QUOTE</a>
                         </div>
                     </div>
                 </div>
@@ -134,18 +134,18 @@
                     <div class="col-lg-5 d-flex align-items-center">
                         <div class="con_about_text">
                             <h6 class="con_title_top wow fadeInUp" data-wow-delay="0.2s" >*Truck Measurements: 13ft long X 8 ft wide X 6ft high</h6>
-                            <p class="con_p wow fadeInUp" data-wow-delay="0.4s"> </p>
+                            <p class="con_p wow fadeInUp" data-wow-delay="0.4s"></p>
                             <!-- <a href="about.html" class="con_btn btn_effect wow fadeInUp" data-wow-delay="0.5s">Learn More</a> -->
                         </div>
                     </div>
                 </div>
             </section>
             <section class="con_call_action_area">
-                <div class="overlay_bg parallax-effect price-action" style="background: url(./img/home/action.jpg) no-repeat;"></div>
+                <div class="overlay_bg parallax-effect price-action" style="background: url(./img/home-1/project/21.jpg) no-repeat;"></div>
                 <div class="container">
                     <div class="d-flex action_info justify-content-between align-items-center">
-                        <h2 class="wow fadeInLeft" data-wow-delay="0.2s">We will provide you the best work<br> which you dreamt for!</h2>
-                        <a href="#" class="con_btn btn_effect wow fadeInRight" data-wow-delay="0.3s">FREE CONSULTATION</a>
+                        <h2 class="wow fadeInLeft" data-wow-delay="0.2s">Your satisfaction is our priority. <br> Contact us to get a free quote!</h2>
+                        <a href="contact.html" class="con_btn btn_effect wow fadeInRight" data-wow-delay="0.3s">GET A FREE QUOTE</a>
                     </div>
                 </div>
             </section>
