--- a/website-docs/contact.html
+++ b/website-docs/contact.html
@@ -31,7 +31,7 @@
                             <div class="row">
                                 <div class="col-md-8 col-9">
                                     <div class="header_contact_info">
-                                        <a href="#"><i class="fas fa-phone"></i>Call Us: +07 554 332 322</a>
+                                        <a href="tel:+1 613 913 1899"><i class="fas fa-phone"></i>Call Us: +1 613 913 1899</a>
                                         <a href="mailto:axbdemolition@gmail.com"><i class="fas fa-envelope"></i>axbdemolition@gmail.com</a>
                                     </div>
                                 </div>
@@ -79,12 +79,12 @@
                 </nav>
             </header>
             <section class="banner_area">
-                <div class="overlay_bg parallax-effect" style="background: url(./img/banner8.jpg) no-repeat;"></div>
+                <div class="overlay_bg parallax-effect" style="background: url(./img/home-1/project/17.jpg) no-repeat;"></div>
                 <div class="container">
                     <div class="breadcrumb_content">
                         <h2>Contact Us</h2>
                         <ol class="list-unstyled">
-                            <li><a href="#">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li>Contact</li>
                         </ol>
                     </div>
@@ -98,27 +98,21 @@
                                 <div class="contact_info_item">
                                     <i class="ti-location-pin"></i>
                                     <h3>Address</h3>
-                                    <p>2602 Powder House Road, West Palm Beach, FL 33410</p>
+                                    <p>4867 Navan Rd, Ottawa, ON K4B 1H9</p>
                                 </div>
                                 <div class="contact_info_item">
                                     <i class="ti-mobile"></i>
                                     <h3>Contact Number</h3>
-                                    <p>Phone: <a href="tel:0964355803031">(+096) 435 - 580 - 3031</a></p>
-                                    <p>Tele: <a href="tel:0964355803031">1 (877) 636-0443 </a></p>
-                                    <p>Fax: <a href="tel:0964355803031">+1-213-452-1551 </a></p>
+                                    <p>Phone: <a href="tel:0964355803031">+1 (613) 913-1899</a></p>
                                 </div>
                                 <div class="contact_info_item">
                                     <i class="ti-email"></i>
                                     <h3>Email Address</h3>
-                                    <p>Phone: <a href="mailto:pixibuildercontact@email.com">pixibuilderstheme@email.com</a></p>
-                                    <p>Tele: <a href="mailto:pixibuildercontact@email.com">pixibuildercontact@email.com</a></p>
+                                    <p><a href="mailto:pixibuildercontact@email.com">axbdemolition@gmail.com</a></p>
                                 </div>
                                 <div class="social_icon">
                                     <h3>Follow Us On</h3>
                                     <a href="#"><i class="ti-facebook"></i></a>
-                                    <a href="#"><i class="ti-pinterest"></i></a>
-                                    <a href="#"><i class="ti-twitter-alt"></i></a>
-                                    <a href="#"><i class="fab fa-youtube"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -153,50 +147,34 @@
                 </div>
             </section>
             <section class="map_area">
-                <div id="mapBox2" class="mapBox2" data-lat="40.701083" data-lon="-74.1522848" data-zoom="12" data-marker="img/location.png" data-info="54B, Tailstoi Town 5238 La city, IA 522364" data-mlat="40.701083" data-mlon="-74.1522848">
-                </div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2800.23005181817!2d-75.43616082199864!3d45.4248637077905!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce72aaf5d62ecd%3A0xc44bbfb449082712!2s4867%20Navan%20Rd!5e0!3m2!1sen!2sca!4v1692435325470!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section>
             <footer class="footer_area">
                 <div class="container">
                     <div class="row footer_top">
-                        <div class="col-lg-4 col-sm-7 wow fadeInUp" data-wow-delay="0.2s">
+                        <div class="col-lg-4 col-sm-7 wow fadeInLeft" data-wow-delay="0.2s">
                             <div class="f_widget info_widget">
-                                <a href="#" class="f_logo"><img src="img/Logo.png" alt=""></a>
+                                <a href="#" class="f_logo"><img src="img/axblogo2.svg" alt="AXB official logo" class="footer-logo"></a>
                                 <div class="info_list">
                                     <div class="info_item">
                                         <i class="ti-location-pin"></i>
-                                        <p>2602 Powder House Road, West Palm Beach, FL 33410</p>
+                                        <p>4867 Navan Rd, Ottawa, ON K4B 1H9</p>
                                     </div>
                                     <div class="info_item">
                                         <i class="ti-mobile"></i>
-                                        <p><a href="tel:4355803031">+435-580-3031</a> /<a href="tel:4356284157">+435-628-4157</a></p>
+                                        <p><a href="tel:6139131899">+1 613 913 1899</a></p>
                                     </div>
                                     <div class="info_item">
                                         <i class="ti-email"></i>
-                                        <p><a href="mailto:pixelbuilderstheme@gmail.com">pixelbuilderstheme@gmail.com</a></p>
+                                        <p><a href="mailto:axbdemolition@gmail.com">axbdemolition@gmail.com</a></p>
                                     </div>
                                 </div>
                                 <div class="social_icon">
                                     <a href="#"><i class="ti-facebook"></i></a>
-                                    <a href="#"><i class="ti-pinterest"></i></a>
-                                    <a href="#"><i class="ti-twitter-alt"></i></a>
-                                    <a href="#"><i class="ti-vimeo-alt"></i></a>
-                                    <a href="#"><i class="ti-dribbble"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-3 col-sm-5 wow fadeInUp" data-wow-delay="0.4s">
-                            <div class="f_widget link_widget">
-                                <h2 class="f_title">Usefull Links</h2>
-                                <ul class="list-unstyled">
-                                    <li><a href="#">Support Center (Faq)</a></li>
-                                    <li><a href="#">Features Overview</a></li>
-                                    <li><a href="#">Welcome Page</a></li>
-                                    <li><a href="#">Under Maintenance</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-2 col-sm-5 wow fadeInUp" data-wow-delay="0.6s">
                             <div class="f_widget link_widget">
                                 <h2 class="f_title">Navigation</h2>
                                 <ul class="list-unstyled">
@@ -207,37 +185,12 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-sm-7 wow fadeInUp" data-wow-delay="0.8s">
-                            <div class="f_widget subscribe_widget">
-                                <h2 class="f_title">Subscribe to Our Newsletter</h2>
-                                <p>We are the leaders in the construction and building industries.</p>
-                                <form action="#" class="f_subscribe mailchimp">
-                                    <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
-                                    <button class="btn btn-submit" type="submit"><i class="fas fa-paper-plane"></i></button>
-                                    <p class="mchimp-errmessage" style="display: none;"></p>
-                                    <p class="mchimp-sucmessage" style="display: none;"></p>
-                                </form>
-                            </div>
-                        </div>
                     </div>
-                    <div class="footer_bottom wow fadeInUp" data-wow-delay="0.2s">© 2019. All Rights Reserved. Design by <a href="#">Pixel Builders</a></div>
+                    <div class="footer_bottom wow fadeInUp" data-wow-delay="0.4s">© 2023. All Rights Reserved. Design by <a href="decodeseb.com">Sébastien Villiers</a></div>
                 </div>
             </footer>
         </div>
     </div>
-    <form action="#" class="search_boxs" role="search">
-        <div class="search_box_inner">
-            <div class="close_icon">
-                <i class="ti-close"></i>
-            </div>
-            <div class="input-group">
-                <input type="text" name="search" class="form_control search-input" placeholder="Search Here" autofocus>
-                <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button"><i class="ti-email"></i></button>
-                </div>
-            </div>
-        </div>
-    </form>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
