--- a/website-docs/contact.html
+++ b/website-docs/contact.html
@@ -122,7 +122,7 @@
                                     <h5 class="con_title_top">REQUEST A QUOTE</h5>
                                     <h2 class="con_title">Contact With Us</h2>
                                 </div>
-                                <form action="contact_process.php" method="post" id="contactForm" novalidate="novalidate" class="contact_from get_quote_form">
+                                <form action="#quote" name="Quote Request" method="post" id="contactForm" novalidate="novalidate" class="contact_from get_quote_form" data-netlify="true">
                                     <div class="form-group">
                                         <input type="text" class="form-control" id="name" name="name" placeholder="Your Name">
                                     </div>
