--- a/website-docs/index.html
+++ b/website-docs/index.html
@@ -337,7 +337,7 @@
                                     <h5 class="con_title_top">REQUEST A QUOTE</h5>
                                     <h2 class="con_title">Contact With Us</h2>
                                 </div>
-                                <form action="#quote" method="post" id="quote-request" novalidate="novalidate" class="contact_form get_quote_form" data-netlify="true">
+                                <form action="#quote" method="post" id="contact-form" novalidate="novalidate" class="contact_form get_quote_form" data-netlify="true">
                                     <div class="form-group">
                                         <input type="text" class="form-control" id="name" name="name" placeholder="Your Name">
                                     </div>
